// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/login should return logged in if logged in 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": true,
}
`;

exports[`containers/login should return not logged in if logged out 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": false,
}
`;
